Fixed overflow in cards inside a DIV

--- a/yotereparo.js/src/App.css
+++ b/yotereparo.js/src/App.css
@@ -7,7 +7,7 @@ hr {
   border-top: 10px solid #903749;
   opacity: 0.3;
   margin-bottom: -20%;
-  padding: 10px;
+  padding-top: 20px;
 }
 
 .centered {
